--- a/pages/18736.html
+++ b/pages/18736.html
@@ -3,7 +3,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
   <title>
-      Categorical dynamics in nLab
+      Marc Bezem in nLab
   </title>
 
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
@@ -257,8 +257,8 @@ margin-left: 0em;
     //--><!]]>
   </script>
 
-  	<link href="https://ncatlab.org/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
-  	<link href="https://ncatlab.org/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
+  	<link href="http://nlab-local/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
+  	<link href="http://nlab-local/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
   <script type="text/javascript">
   document.observe("dom:loaded", function() {
     generateThmNumbers();
@@ -283,7 +283,7 @@ margin-left: 0em;
         c9-9,20-18,33-22C159,52,166,54,170,60' />
     </svg></span>
       <span class="webName">nLab</span><br />
-      Categorical dynamics
+      Marc Bezem
   </h1>
 
 
@@ -308,50 +308,42 @@ margin-left: 0em;
 
 
 <div id="revision">
-    <p>This page provides some links related to the talk</p>
+    <ul>
+<li><a href='https://www.ii.uib.no/~bezem/'>webpage</a></li>
+</ul>
+
+<h2 id='related_lab_entries'>related <math class='maruku-mathml' display='inline' id='mathml_45c286cb21a581012002939062173853adf1c32e_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>n</mi></mrow><annotation encoding='application/x-tex'>n</annotation></semantics></math>Lab entries</h2>
 
 <ul>
 <li>
-<p><a class='existingWikiWord' href='/nlab/show/William+Lawvere'>William Lawvere</a>,</p>
+<p><a class='existingWikiWord' href='/nlab/show/univalence+axiom'>univalence</a></p>
+</li>
 
-<p><em>Categorical dynamics</em></p>
-
-<p>1967 Chicago lectures</p>
-
-<p>pp. 1-28 in</p>
-
-<p><a class='existingWikiWord' href='/nlab/show/Anders+Kock'>Anders Kock</a> (ed.),</p>
-
-<p><em>Topos Theoretic Methods in Geometry</em>, Aarhus Univ. Var. Pub. Ser. 30 (1979).</p>
-
-<p>(<a href='http://www.mat.uc.pt/~ct2011/abstracts/lawvere_w.pdf'>pdf abstract</a>)</p>
-
-<p><em>Categorical Dynamics Revisited</em>, talk at <em>Sets Within Geometry</em>, Nancy, France 26-29 July 2011 (<a href='https://www.youtube.com/watch?v=sXATg9_6iWE'>recording</a>)</p>
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/cubical+type+theory'>cubical type theory</a></p>
 </li>
 </ul>
 
-<p>which together with <em><a class='existingWikiWord' href='/nlab/show/Toposes+of+laws+of+motion'>Toposes of laws of motion</a></em> forms the beginning of the theory of <a class='existingWikiWord' href='/nlab/show/synthetic+differential+geometry'>synthetic differential geometry</a> and its use in the <a class='existingWikiWord' href='/nlab/show/foundation+of+mathematics'>foundations</a> of <a class='existingWikiWord' href='/nlab/show/continuum+mechanics'>continuum physics</a>.</p>
-
-<p><div class='property'> category: <a class='category_link' href='/nlab/list/reference'>reference</a></div></p>
+<p><div class='property'> category: <a class='category_link' href='/nlab/list/people'>people</a></div></p>
 </div>
 
 <div class="revisedby">
-  Revised on November  2, 2017 05:19:08 
+  Created on November  2, 2017 05:28:04 
   by <a class="existingWikiWord" href="/nlab/show/Urs+Schreiber">Urs Schreiber</a>
   (46.183.103.8)
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/Categorical+dynamics" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Categorical+dynamics/2" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(2 revisions)</span> | <a href="/nlab/show/diff/Categorical+dynamics" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Categorical+dynamics" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/Marc+Bezem" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a>
   
   <span class="views">
     | Views: 
-    <a href="/nlab/print/Categorical+dynamics" accesskey="p" id="view_print" rel="nofollow">Print</a>
+    <a href="/nlab/print/Marc+Bezem" accesskey="p" id="view_print" rel="nofollow">Print</a>
     | 
-    <a href="/nlab/tex/Categorical+dynamics" id="view_tex" rel="nofollow">TeX</a>
+    <a href="/nlab/tex/Marc+Bezem" id="view_tex" rel="nofollow">TeX</a>
     |
-    <a href="/nlab/source/Categorical+dynamics" id="view_source" rel="nofollow">Source</a>
+    <a href="/nlab/source/Marc+Bezem" id="view_source" rel="nofollow">Source</a>
   </span>
 
   
