--- a/pages/420.html
+++ b/pages/420.html
@@ -308,19 +308,31 @@ margin-left: 0em;
 
 
 <div id="revision">
-    <h1 id='the_cube'>The <math class='maruku-mathml' display='inline' id='mathml_2974846a9d78c97c4644d9716c2e408a1264485c_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>n</mi></mrow><annotation encoding='application/x-tex'>n</annotation></semantics></math>-cube</h1>
-<div class='maruku_toc'><ul><li><a href='#idea'>Idea</a></li><li><a href='#as_a_cubical_set'>As a cubical set</a></li><li><a href='#as_a_topological_space'>As a topological space</a></li></ul></div>
+    <h1 id='the_cube'>The <math class='maruku-mathml' display='inline' id='mathml_575c5df62debddcc15bdcf99804a8ab336692f1b_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>n</mi></mrow><annotation encoding='application/x-tex'>n</annotation></semantics></math>-cube</h1>
+<div class='maruku_toc'><ul><li><a href='#idea'>Idea</a></li><li><a href='#as_a_cubical_set'>As a cubical set</a></li><li><a href='#as_a_topological_space'>As a topological space</a></li><li><a href='#related_entries'>related entries</a></li></ul></div>
 <h2 id='idea'>Idea</h2>
 
-<p>The <strong><math class='maruku-mathml' display='inline' id='mathml_2974846a9d78c97c4644d9716c2e408a1264485c_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>n</mi></mrow><annotation encoding='application/x-tex'>n</annotation></semantics></math>-dimensional cube</strong>, or simply <strong><math class='maruku-mathml' display='inline' id='mathml_2974846a9d78c97c4644d9716c2e408a1264485c_3' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>n</mi></mrow><annotation encoding='application/x-tex'>n</annotation></semantics></math>-cube</strong>, is a generalisation of the ordinary cube (or <math class='maruku-mathml' display='inline' id='mathml_2974846a9d78c97c4644d9716c2e408a1264485c_4' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mn>3</mn></mrow><annotation encoding='application/x-tex'>3</annotation></semantics></math>-cube) to arbitrary dimensions. It comes in many guises.</p>
+<p>The <strong><math class='maruku-mathml' display='inline' id='mathml_575c5df62debddcc15bdcf99804a8ab336692f1b_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>n</mi></mrow><annotation encoding='application/x-tex'>n</annotation></semantics></math>-dimensional cube</strong>, or simply <strong><math class='maruku-mathml' display='inline' id='mathml_575c5df62debddcc15bdcf99804a8ab336692f1b_3' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>n</mi></mrow><annotation encoding='application/x-tex'>n</annotation></semantics></math>-cube</strong>, is a generalisation of the ordinary cube (or <math class='maruku-mathml' display='inline' id='mathml_575c5df62debddcc15bdcf99804a8ab336692f1b_4' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mn>3</mn></mrow><annotation encoding='application/x-tex'>3</annotation></semantics></math>-cube) to arbitrary dimensions. It comes in many guises.</p>
 
 <h2 id='as_a_cubical_set'>As a cubical set</h2>
 
-<p>The standard cubical <math class='maruku-mathml' display='inline' id='mathml_2974846a9d78c97c4644d9716c2e408a1264485c_5' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>n</mi></mrow><annotation encoding='application/x-tex'>n</annotation></semantics></math>-cube is the <a class='existingWikiWord' href='/nlab/show/cubical+set'>cubical set</a> represented (as a <a class='existingWikiWord' href='/nlab/show/presheaf'>presheaf</a>) by the object <math class='maruku-mathml' display='inline' id='mathml_2974846a9d78c97c4644d9716c2e408a1264485c_6' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo stretchy='false'>[</mo><mi>n</mi><mo stretchy='false'>]</mo></mrow><annotation encoding='application/x-tex'>[n]</annotation></semantics></math> in the <a class='existingWikiWord' href='/nlab/show/category+of+cubes'>cube category</a>.</p>
+<p>The standard cubical <math class='maruku-mathml' display='inline' id='mathml_575c5df62debddcc15bdcf99804a8ab336692f1b_5' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>n</mi></mrow><annotation encoding='application/x-tex'>n</annotation></semantics></math>-cube is the <a class='existingWikiWord' href='/nlab/show/cubical+set'>cubical set</a> represented (as a <a class='existingWikiWord' href='/nlab/show/presheaf'>presheaf</a>) by the object <math class='maruku-mathml' display='inline' id='mathml_575c5df62debddcc15bdcf99804a8ab336692f1b_6' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo stretchy='false'>[</mo><mi>n</mi><mo stretchy='false'>]</mo></mrow><annotation encoding='application/x-tex'>[n]</annotation></semantics></math> in the <a class='existingWikiWord' href='/nlab/show/category+of+cubes'>cube category</a>.</p>
 
 <h2 id='as_a_topological_space'>As a topological space</h2>
 
-<p>The standard topological <math class='maruku-mathml' display='inline' id='mathml_2974846a9d78c97c4644d9716c2e408a1264485c_7' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>n</mi></mrow><annotation encoding='application/x-tex'>n</annotation></semantics></math>-cube is the space <math class='maruku-mathml' display='inline' id='mathml_2974846a9d78c97c4644d9716c2e408a1264485c_8' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo stretchy='false'>[</mo><mn>0</mn><mo>,</mo><mn>1</mn><msup><mo stretchy='false'>]</mo> <mi>n</mi></msup></mrow><annotation encoding='application/x-tex'>[0,1]^n</annotation></semantics></math>, where <math class='maruku-mathml' display='inline' id='mathml_2974846a9d78c97c4644d9716c2e408a1264485c_9' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo stretchy='false'>[</mo><mn>0</mn><mo>,</mo><mn>1</mn><mo stretchy='false'>]</mo></mrow><annotation encoding='application/x-tex'>[0,1]</annotation></semantics></math> is the <a class='existingWikiWord' href='/nlab/show/interval'>unit interval</a>. The collection of topological cubes forms a topological <span class='newWikiWord'>cocubical set<a href='/nlab/new/cocubical+set'>?</a></span>.</p>
+<p>The standard topological <math class='maruku-mathml' display='inline' id='mathml_575c5df62debddcc15bdcf99804a8ab336692f1b_7' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>n</mi></mrow><annotation encoding='application/x-tex'>n</annotation></semantics></math>-cube is the space <math class='maruku-mathml' display='inline' id='mathml_575c5df62debddcc15bdcf99804a8ab336692f1b_8' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo stretchy='false'>[</mo><mn>0</mn><mo>,</mo><mn>1</mn><msup><mo stretchy='false'>]</mo> <mi>n</mi></msup></mrow><annotation encoding='application/x-tex'>[0,1]^n</annotation></semantics></math>, where <math class='maruku-mathml' display='inline' id='mathml_575c5df62debddcc15bdcf99804a8ab336692f1b_9' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo stretchy='false'>[</mo><mn>0</mn><mo>,</mo><mn>1</mn><mo stretchy='false'>]</mo></mrow><annotation encoding='application/x-tex'>[0,1]</annotation></semantics></math> is the <a class='existingWikiWord' href='/nlab/show/interval'>unit interval</a>. The collection of topological cubes forms a topological <span class='newWikiWord'>cocubical set<a href='/nlab/new/cocubical+set'>?</a></span>.</p>
+
+<h2 id='related_entries'>related entries</h2>
+
+<ul>
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/cubical+set'>cubical set</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/cubical+type+theory'>cubical type theory</a></p>
+</li>
+</ul>
 
 <p>
  
@@ -332,14 +344,14 @@ margin-left: 0em;
 </div>
 
 <div class="revisedby">
-  Revised on April  8, 2015 10:24:57 
-  by <a class="existingWikiWord" href="/nlab/show/AnonymousCoward">Anonymous Coward</a>
-  (129.16.25.59)
+  Revised on November  2, 2017 05:53:21 
+  by <a class="existingWikiWord" href="/nlab/show/Urs+Schreiber">Urs Schreiber</a>
+  (46.183.103.8)
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/cube" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/cube/5" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(5 revisions)</span> | <a href="/nlab/show/diff/cube" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/cube" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/cube" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/cube/6" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(6 revisions)</span> | <a href="/nlab/show/diff/cube" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/cube" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   
   <span class="views">
     | Views: 
