--- a/pages/1788.html
+++ b/pages/1788.html
@@ -313,7 +313,7 @@ margin-left: 0em;
 
 <p><strong>(<a class='existingWikiWord' href='/nlab/show/canonical+momentum'>canonical momentum</a>)</strong></p>
 
-<p>Consider a <a class='existingWikiWord' href='/nlab/show/Lagrangian+quantum+field+theory'>Lagrangian field theory</a> <math class='maruku-mathml' display='inline' id='mathml_41f3bc42d074daeda22b904056e93587ea83d5c6_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo stretchy='false'>(</mo><mi>E</mi><mo>,</mo><mstyle mathvariant='bold'><mi>L</mi></mstyle><mo stretchy='false'>)</mo></mrow><annotation encoding='application/x-tex'>(E, \mathbf{L})</annotation></semantics></math> whose <a class='existingWikiWord' href='/nlab/show/Lagrangian+density'>Lagrangian density</a> <math class='maruku-mathml' display='inline' id='mathml_41f3bc42d074daeda22b904056e93587ea83d5c6_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mstyle mathvariant='bold'><mi>L</mi></mstyle></mrow><annotation encoding='application/x-tex'>\mathbf{L}</annotation></semantics></math></p>
+<p>Consider a <a class='existingWikiWord' href='/nlab/show/Lagrangian+quantum+field+theory'>Lagrangian field theory</a> <math class='maruku-mathml' display='inline' id='mathml_621c38a3d41a55f7eb92033e9e0203ebe38e02e9_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo stretchy='false'>(</mo><mi>E</mi><mo>,</mo><mstyle mathvariant='bold'><mi>L</mi></mstyle><mo stretchy='false'>)</mo></mrow><annotation encoding='application/x-tex'>(E, \mathbf{L})</annotation></semantics></math> whose <a class='existingWikiWord' href='/nlab/show/Lagrangian+density'>Lagrangian density</a> <math class='maruku-mathml' display='inline' id='mathml_621c38a3d41a55f7eb92033e9e0203ebe38e02e9_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mstyle mathvariant='bold'><mi>L</mi></mstyle></mrow><annotation encoding='application/x-tex'>\mathbf{L}</annotation></semantics></math></p>
 
 <ol>
 <li>
@@ -325,18 +325,18 @@ margin-left: 0em;
 </li>
 </ol>
 
-<p>Hence if the <a class='existingWikiWord' href='/nlab/show/field+bundle'>field bundle</a> <math class='maruku-mathml' display='inline' id='mathml_41f3bc42d074daeda22b904056e93587ea83d5c6_3' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>E</mi><mover><mo>→</mo><mi>fb</mi></mover><mi>Σ</mi></mrow><annotation encoding='application/x-tex'>E \overset{fb}{\to} \Sigma</annotation></semantics></math> is a <a class='existingWikiWord' href='/nlab/show/trivial+vector+bundle'>trivial vector bundle</a> over <a class='existingWikiWord' href='/nlab/show/Minkowski+space'>Minkowski spacetime</a> (example \ref{TrivialVectorBundleAsAFieldBundle}) this means to consider the case that</p>
-<div class='maruku-equation'><math class='maruku-mathml' display='block' id='mathml_41f3bc42d074daeda22b904056e93587ea83d5c6_4' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mstyle mathvariant='bold'><mi>L</mi></mstyle><mspace width='thickmathspace'></mspace><mo>=</mo><mspace width='thickmathspace'></mspace><mi>L</mi><mrow><mo>(</mo><mo stretchy='false'>(</mo><msup><mi>ϕ</mi> <mi>a</mi></msup><mo stretchy='false'>)</mo><mo>,</mo><mo stretchy='false'>(</mo><msubsup><mi>ϕ</mi> <mi>μ</mi> <mi>a</mi></msubsup><mo stretchy='false'>)</mo><mo>)</mo></mrow><msub><mi>dvol</mi> <mi>Σ</mi></msub><mspace width='thinmathspace'></mspace><mo>.</mo></mrow><annotation encoding='application/x-tex'>
+<p>Hence if the <a class='existingWikiWord' href='/nlab/show/field+bundle'>field bundle</a> <math class='maruku-mathml' display='inline' id='mathml_621c38a3d41a55f7eb92033e9e0203ebe38e02e9_3' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>E</mi><mover><mo>→</mo><mi>fb</mi></mover><mi>Σ</mi></mrow><annotation encoding='application/x-tex'>E \overset{fb}{\to} \Sigma</annotation></semantics></math> is a <a class='existingWikiWord' href='/nlab/show/trivial+vector+bundle'>trivial vector bundle</a> over <a class='existingWikiWord' href='/nlab/show/Minkowski+space'>Minkowski spacetime</a> (example \ref{TrivialVectorBundleAsAFieldBundle}) this means to consider the case that</p>
+<div class='maruku-equation'><math class='maruku-mathml' display='block' id='mathml_621c38a3d41a55f7eb92033e9e0203ebe38e02e9_4' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mstyle mathvariant='bold'><mi>L</mi></mstyle><mspace width='thickmathspace'></mspace><mo>=</mo><mspace width='thickmathspace'></mspace><mi>L</mi><mrow><mo>(</mo><mo stretchy='false'>(</mo><msup><mi>ϕ</mi> <mi>a</mi></msup><mo stretchy='false'>)</mo><mo>,</mo><mo stretchy='false'>(</mo><msubsup><mi>ϕ</mi> <mrow><mo>,</mo><mi>μ</mi></mrow> <mi>a</mi></msubsup><mo stretchy='false'>)</mo><mo>)</mo></mrow><mo>∧</mo><msub><mi>dvol</mi> <mi>Σ</mi></msub><mspace width='thinmathspace'></mspace><mo>.</mo></mrow><annotation encoding='application/x-tex'>
   \mathbf{L} 
     \;=\; 
    L\left( 
-     (\phi^a), (\phi^a_{\mu}) 
-   \right) dvol_\Sigma
+     (\phi^a), (\phi^a_{,\mu}) 
+   \right) \wedge dvol_\Sigma
   \,.
 
 </annotation></semantics></math></div>
 <p>Then the <a class='existingWikiWord' href='/nlab/show/pre-symplectic+current'>presymplectic current</a> (def. \ref{EulerLagrangeOperatorForTivialVectorBundleOverMinkowskiSpacetime}) is (up to possible a horizontally exact part) of the form</p>
-<div class='maruku-equation'><math class='maruku-mathml' display='block' id='mathml_41f3bc42d074daeda22b904056e93587ea83d5c6_5' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msub><mi>Ω</mi> <mi>BFV</mi></msub><mspace width='thickmathspace'></mspace><mo>=</mo><mspace width='thickmathspace'></mspace><mi>δ</mi><msubsup><mi>p</mi> <mi>a</mi> <mi>μ</mi></msubsup><mo>∧</mo><mi>δ</mi><msup><mi>ϕ</mi> <mi>a</mi></msup><mo>∧</mo><msub><mi>ι</mi> <mrow><msub><mo>∂</mo> <mi>μ</mi></msub></mrow></msub><msub><mi>dvol</mi> <mi>Σ</mi></msub></mrow><annotation encoding='application/x-tex'>
+<div class='maruku-equation'><math class='maruku-mathml' display='block' id='mathml_621c38a3d41a55f7eb92033e9e0203ebe38e02e9_5' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msub><mi>Ω</mi> <mi>BFV</mi></msub><mspace width='thickmathspace'></mspace><mo>=</mo><mspace width='thickmathspace'></mspace><mi>δ</mi><msubsup><mi>p</mi> <mi>a</mi> <mi>μ</mi></msubsup><mo>∧</mo><mi>δ</mi><msup><mi>ϕ</mi> <mi>a</mi></msup><mo>∧</mo><msub><mi>ι</mi> <mrow><msub><mo>∂</mo> <mi>μ</mi></msub></mrow></msub><msub><mi>dvol</mi> <mi>Σ</mi></msub></mrow><annotation encoding='application/x-tex'>
   \Omega_{BFV}
    \;=\;
   \delta p_a^\mu 
@@ -347,59 +347,111 @@ margin-left: 0em;
 
 </annotation></semantics></math></div>
 <p>where</p>
-<div class='maruku-equation'><math class='maruku-mathml' display='block' id='mathml_41f3bc42d074daeda22b904056e93587ea83d5c6_6' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msubsup><mi>p</mi> <mi>a</mi> <mi>μ</mi></msubsup><mspace width='thickmathspace'></mspace><mo>≔</mo><mspace width='thickmathspace'></mspace><mfrac><mrow><mo>∂</mo><mi>L</mi></mrow><mrow><mo>∂</mo><msubsup><mi>ϕ</mi> <mrow><mo>,</mo><mi>μ</mi></mrow> <mi>a</mi></msubsup></mrow></mfrac><mspace width='thinmathspace'></mspace><mo>.</mo></mrow><annotation encoding='application/x-tex'>
+<div class='maruku-equation'><math class='maruku-mathml' display='block' id='mathml_621c38a3d41a55f7eb92033e9e0203ebe38e02e9_6' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msubsup><mi>p</mi> <mi>a</mi> <mi>μ</mi></msubsup><mspace width='thickmathspace'></mspace><mo>≔</mo><mspace width='thickmathspace'></mspace><mfrac><mrow><mo>∂</mo><mi>L</mi></mrow><mrow><mo>∂</mo><msubsup><mi>ϕ</mi> <mrow><mo>,</mo><mi>μ</mi></mrow> <mi>a</mi></msubsup></mrow></mfrac></mrow><annotation encoding='application/x-tex'>
   p_a^\mu 
     \;\coloneqq\;
   \frac{\partial L}{ \partial \phi^a_{,\mu}}
-  \,.
 
 </annotation></semantics></math></div>
-<p>Here <math class='maruku-mathml' display='inline' id='mathml_41f3bc42d074daeda22b904056e93587ea83d5c6_7' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msub><mi>p</mi> <mi>a</mi></msub><mo>≔</mo><msubsup><mi>p</mi> <mi>a</mi> <mn>0</mn></msubsup></mrow><annotation encoding='application/x-tex'>p_a \coloneqq p_a^0</annotation></semantics></math> is called the “<a class='existingWikiWord' href='/nlab/show/canonical+momentum'>canonical momentum</a>” corresponding to the “<a class='existingWikiWord' href='/nlab/show/polarization'>canonical field coordinate</a>” <math class='maruku-mathml' display='inline' id='mathml_41f3bc42d074daeda22b904056e93587ea83d5c6_8' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msup><mi>ϕ</mi> <mi>a</mi></msup></mrow><annotation encoding='application/x-tex'>\phi^a</annotation></semantics></math>.</p>
+<p>denotes the <a class='existingWikiWord' href='/nlab/show/partial+differentiation'>partial derivative</a> of the <a class='existingWikiWord' href='/nlab/show/Lagrangian+density'>Lagrangian function</a> with respect to the spacetime-<a class='existingWikiWord' href='/nlab/show/derivative'>derivatives</a> of the <a class='existingWikiWord' href='/nlab/show/field+%28physics%29'>field</a> <a class='existingWikiWord' href='/nlab/show/coordinate+system'>coordinates</a>.</p>
+
+<p>Here</p>
+<div class='maruku-equation'><math class='maruku-mathml' display='block' id='mathml_621c38a3d41a55f7eb92033e9e0203ebe38e02e9_7' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mrow><mtable columnalign='right left right left right left right left right left' columnspacing='0em' displaystyle='true'><mtr><mtd><msub><mi>p</mi> <mi>a</mi></msub></mtd> <mtd><mo>≔</mo><msubsup><mi>p</mi> <mi>a</mi> <mn>0</mn></msubsup></mtd></mtr> <mtr><mtd></mtd> <mtd><mo>=</mo><mfrac><mrow><mo>∂</mo><mi>L</mi></mrow><mrow><mo>∂</mo><msubsup><mi>ϕ</mi> <mrow><mo>,</mo><mn>0</mn></mrow> <mi>a</mi></msubsup></mrow></mfrac></mtd></mtr></mtable></mrow></mrow><annotation encoding='application/x-tex'>
+  \begin{aligned}
+    p_a 
+      &amp; \coloneqq 
+    p_a^0
+    \\
+      &amp; =
+    \frac{\partial L}{\partial \phi^a_{,0}}
+  \end{aligned}
+
+</annotation></semantics></math></div>
+<p>is called the <em><a class='existingWikiWord' href='/nlab/show/canonical+momentum'>canonical momentum</a></em> corresponding to the “<a class='existingWikiWord' href='/nlab/show/polarization'>canonical field coordinate</a>” <math class='maruku-mathml' display='inline' id='mathml_621c38a3d41a55f7eb92033e9e0203ebe38e02e9_8' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msup><mi>ϕ</mi> <mi>a</mi></msup></mrow><annotation encoding='application/x-tex'>\phi^a</annotation></semantics></math>.</p>
 
 <p>In the language of <a class='existingWikiWord' href='/nlab/show/multisymplectic+geometry'>multisymplectic geometry</a> the full expression</p>
-<div class='maruku-equation'><math class='maruku-mathml' display='block' id='mathml_41f3bc42d074daeda22b904056e93587ea83d5c6_9' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msubsup><mi>p</mi> <mi>a</mi> <mi>μ</mi></msubsup><msub><mi>ι</mi> <mrow><msub><mo>∂</mo> <mi>μ</mi></msub></mrow></msub><msub><mi>dvol</mi> <mi>Σ</mi></msub><mspace width='thickmathspace'></mspace><mo>∈</mo><mspace width='thickmathspace'></mspace><msubsup><mi>Ω</mi> <mi>Σ</mi> <mrow><mi>p</mi><mo>,</mo><mn>1</mn></mrow></msubsup><mo stretchy='false'>(</mo><mi>E</mi><mo stretchy='false'>)</mo></mrow><annotation encoding='application/x-tex'>
-  p_a^\mu \iota_{\partial_\mu} dvol_\Sigma
+<div class='maruku-equation'><math class='maruku-mathml' display='block' id='mathml_621c38a3d41a55f7eb92033e9e0203ebe38e02e9_9' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msubsup><mi>p</mi> <mi>a</mi> <mi>μ</mi></msubsup><mo>∧</mo><msub><mi>ι</mi> <mrow><msub><mo>∂</mo> <mi>μ</mi></msub></mrow></msub><msub><mi>dvol</mi> <mi>Σ</mi></msub><mspace width='thickmathspace'></mspace><mo>∈</mo><mspace width='thickmathspace'></mspace><msubsup><mi>Ω</mi> <mi>Σ</mi> <mrow><mi>p</mi><mo>,</mo><mn>1</mn></mrow></msubsup><mo stretchy='false'>(</mo><mi>E</mi><mo stretchy='false'>)</mo></mrow><annotation encoding='application/x-tex'>
+  p_a^\mu \wedge \iota_{\partial_\mu} dvol_\Sigma
   \;\in\; 
   \Omega^{p,1}_\Sigma(E)
 
 </annotation></semantics></math></div>
-<p>is also called the “canonical multi-momentum”.</p>
+<p>is also called the “canonical multi-momentum”, or similar.</p>
 </div>
 
 <div class='proof'>
 <h6 id='proof'>Proof</h6>
 
-<p>We compute:</p>
-<div class='maruku-equation'><math class='maruku-mathml' display='block' id='mathml_41f3bc42d074daeda22b904056e93587ea83d5c6_10' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mrow><mtable columnalign='right left right left right left right left right left' columnspacing='0em' displaystyle='true'><mtr><mtd><mstyle mathvariant='bold'><mi>d</mi></mstyle><mstyle mathvariant='bold'><mi>L</mi></mstyle><mspace width='thickmathspace'></mspace><mo>=</mo><mspace width='thickmathspace'></mspace><mrow><mo>(</mo><mfrac><mrow><mo>∂</mo><mi>L</mi></mrow><mrow><mo>∂</mo><msup><mi>ϕ</mi> <mi>a</mi></msup></mrow></mfrac><mi>δ</mi><msup><mi>ϕ</mi> <mi>a</mi></msup><mo>+</mo><mfrac><mrow><mo>∂</mo><mi>L</mi></mrow><mrow><mo>∂</mo><msubsup><mi>ϕ</mi> <mrow><mo>,</mo><mi>μ</mi></mrow> <mi>a</mi></msubsup></mrow></mfrac><mi>δ</mi><msubsup><mi>ϕ</mi> <mrow><mo>,</mo><mi>μ</mi></mrow> <mi>a</mi></msubsup><mo>)</mo></mrow><msub><mi>dvol</mi> <mi>Σ</mi></msub></mtd> <mtd><mo>=</mo><mrow><mo>(</mo><mfrac><mrow><mo>∂</mo><mi>L</mi></mrow><mrow><mo>∂</mo><msup><mi>ϕ</mi> <mi>a</mi></msup></mrow></mfrac><mo>−</mo><mfrac><mi>d</mi><mrow><mi>d</mi><msup><mi>x</mi> <mi>μ</mi></msup></mrow></mfrac><mfrac><mrow><mo>∂</mo><mi>L</mi></mrow><mrow><mo>∂</mo><msubsup><mi>ϕ</mi> <mrow><mo>,</mo><mi>μ</mi></mrow> <mi>a</mi></msubsup></mrow></mfrac><mo>)</mo></mrow><msub><mi>dvol</mi> <mi>Σ</mi></msub><mo>+</mo><mi>d</mi><mrow><mo>(</mo><mfrac><mrow><mo>∂</mo><mi>L</mi></mrow><mrow><mo>∂</mo><msubsup><mi>ϕ</mi> <mrow><mo>,</mo><mi>μ</mi></mrow> <mi>a</mi></msubsup></mrow></mfrac><mi>δ</mi><msup><mi>ϕ</mi> <mi>a</mi></msup><mo>)</mo></mrow><msub><mi>ι</mi> <mrow><msub><mo>∂</mo> <mi>μ</mi></msub></mrow></msub><msub><mi>dvol</mi> <mi>Σ</mi></msub></mtd></mtr></mtable></mrow></mrow><annotation encoding='application/x-tex'>
+<p>We compute as before:</p>
+<div class='maruku-equation'><math class='maruku-mathml' display='block' id='mathml_621c38a3d41a55f7eb92033e9e0203ebe38e02e9_10' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mrow><mtable columnalign='right left right left right left right left right left' columnspacing='0em' displaystyle='true'><mtr><mtd><mstyle mathvariant='bold'><mi>d</mi></mstyle><mstyle mathvariant='bold'><mi>L</mi></mstyle></mtd> <mtd><mo>=</mo><mrow><mo>(</mo><mfrac><mrow><mo>∂</mo><mi>L</mi></mrow><mrow><mo>∂</mo><msup><mi>ϕ</mi> <mi>a</mi></msup></mrow></mfrac><mi>δ</mi><msup><mi>ϕ</mi> <mi>a</mi></msup><mo>+</mo><mfrac><mrow><mo>∂</mo><mi>L</mi></mrow><mrow><mo>∂</mo><msubsup><mi>ϕ</mi> <mrow><mo>,</mo><mi>μ</mi></mrow> <mi>a</mi></msubsup></mrow></mfrac><mi>δ</mi><msubsup><mi>ϕ</mi> <mrow><mo>,</mo><mi>μ</mi></mrow> <mi>a</mi></msubsup><mo>)</mo></mrow><mo>∧</mo><msub><mi>dvol</mi> <mi>Σ</mi></msub></mtd></mtr> <mtr><mtd></mtd> <mtd><mo>=</mo><mrow><mo>(</mo><mfrac><mrow><mo>∂</mo><mi>L</mi></mrow><mrow><mo>∂</mo><msup><mi>ϕ</mi> <mi>a</mi></msup></mrow></mfrac><mo>−</mo><mfrac><mi>d</mi><mrow><mi>d</mi><msup><mi>x</mi> <mi>μ</mi></msup></mrow></mfrac><mfrac><mrow><mo>∂</mo><mi>L</mi></mrow><mrow><mo>∂</mo><msubsup><mi>ϕ</mi> <mrow><mo>,</mo><mi>μ</mi></mrow> <mi>a</mi></msubsup></mrow></mfrac><mo>)</mo></mrow><mo>∧</mo><msub><mi>dvol</mi> <mi>Σ</mi></msub><mo>−</mo><mi>d</mi><munder><munder><mrow><mrow><mo>(</mo><mfrac><mrow><mo>∂</mo><mi>L</mi></mrow><mrow><mo>∂</mo><msubsup><mi>ϕ</mi> <mrow><mo>,</mo><mi>μ</mi></mrow> <mi>a</mi></msubsup></mrow></mfrac><mi>δ</mi><msup><mi>ϕ</mi> <mi>a</mi></msup><mo>)</mo></mrow><mo>∧</mo><msub><mi>ι</mi> <mrow><msub><mo>∂</mo> <mi>μ</mi></msub></mrow></msub><msub><mi>dvol</mi> <mi>Σ</mi></msub></mrow><mo>⏟</mo></munder><mrow><msub><mi>Θ</mi> <mi>BFV</mi></msub></mrow></munder></mtd></mtr></mtable></mrow><mspace width='thinmathspace'></mspace><mo>.</mo></mrow><annotation encoding='application/x-tex'>
   \begin{aligned}
     \mathbf{d} \mathbf{L}
-    \;=\;
+    &amp; =
     \left(
       \frac{\partial L}{\partial \phi^a} \delta \phi^a
       + 
       \frac{\partial L}{\partial \phi^a_{,\mu}} \delta \phi^a_{,\mu}
     \right)
+    \wedge
     dvol_\Sigma
+    \\
     &amp; =
     \left(
       \frac{\partial L}{\partial \phi^a}
       -
       \frac{d}{d x^\mu} \frac{\partial L}{\partial \phi^a_{,\mu}}
     \right)
+    \wedge
     dvol_\Sigma
-    +
-    d 
+    -
+    d
+    \underset{
+      \Theta_{BFV}
+    }{ 
+    \underbrace{
+      \left(
+        \frac{\partial L}{\partial \phi^a_{,\mu}} \delta \phi^a
+      \right)
+      \wedge
+      \iota_{\partial_\mu} dvol_\Sigma
+    }
+    }
+  \end{aligned}
+  \,.
+
+</annotation></semantics></math></div>
+<p>Hence</p>
+<div class='maruku-equation'><math class='maruku-mathml' display='block' id='mathml_621c38a3d41a55f7eb92033e9e0203ebe38e02e9_11' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mrow><mtable columnalign='right left right left right left right left right left' columnspacing='0em' displaystyle='true'><mtr><mtd><msub><mi>Ω</mi> <mi>BFV</mi></msub></mtd> <mtd><mo>≔</mo><mi>δ</mi><msub><mi>Θ</mi> <mi>BFV</mi></msub></mtd></mtr> <mtr><mtd></mtd> <mtd><mo>=</mo><mi>δ</mi><mrow><mo>(</mo><mfrac><mrow><mo>∂</mo><mi>L</mi></mrow><mrow><mo>∂</mo><msubsup><mi>ϕ</mi> <mrow><mo>,</mo><mi>μ</mi></mrow> <mi>a</mi></msubsup></mrow></mfrac><mi>δ</mi><msubsup><mi>ϕ</mi> <mrow><mo>,</mo><mi>μ</mi></mrow> <mi>a</mi></msubsup><mo>∧</mo><msub><mi>ι</mi> <mrow><msub><mo>∂</mo> <mi>μ</mi></msub></mrow></msub><msub><mi>dvol</mi> <mi>Σ</mi></msub><mo>)</mo></mrow></mtd></mtr> <mtr><mtd></mtd> <mtd><mo>=</mo><mi>δ</mi><mfrac><mrow><mo>∂</mo><mi>L</mi></mrow><mrow><mo>∂</mo><msubsup><mi>ϕ</mi> <mrow><mo>,</mo><mi>μ</mi></mrow> <mi>a</mi></msubsup></mrow></mfrac><mo>∧</mo><mi>δ</mi><msubsup><mi>ϕ</mi> <mrow><mo>,</mo><mi>μ</mi></mrow> <mi>a</mi></msubsup><mo>∧</mo><msub><mi>ι</mi> <mrow><msub><mo>∂</mo> <mi>μ</mi></msub></mrow></msub><msub><mi>dvol</mi> <mi>Σ</mi></msub></mtd></mtr> <mtr><mtd></mtd> <mtd><mo>=</mo><mi>δ</mi><msubsup><mi>p</mi> <mi>a</mi> <mi>μ</mi></msubsup><mo>∧</mo><mi>δ</mi><msup><mi>ϕ</mi> <mi>a</mi></msup><mo>∧</mo><msub><mi>ι</mi> <mrow><msub><mo>∂</mo> <mi>μ</mi></msub></mrow></msub><msub><mi>dvol</mi> <mi>Σ</mi></msub></mtd></mtr></mtable></mrow></mrow><annotation encoding='application/x-tex'>
+  \begin{aligned}
+    \Omega_{BFV}
+    &amp; \coloneqq
+    \delta \Theta_{BFV}
+    \\
+    &amp; =
+    \delta
     \left(
-      \frac{\partial L}{\partial \phi^a_{,\mu}} \delta \phi^a
+      \frac{\partial L}{\partial \phi^a_{,\mu}}
+      \delta \phi^a_{,\mu}
+      \wedge \iota_{\partial_\mu} dvol_\Sigma
     \right)
-    \iota_{\partial_\mu} dvol_\Sigma
+    \\
+    &amp; =
+     \delta
+      \frac{\partial L}{\partial \phi^a_{,\mu}}
+     \wedge
+      \delta \phi^a_{,\mu}
+      \wedge 
+      \iota_{\partial_\mu} dvol_\Sigma
+    \\
+    &amp; =
+    \delta p_a^\mu \wedge \delta \phi^a \wedge \iota_{\partial_\mu} dvol_\Sigma
   \end{aligned}
 
 </annotation></semantics></math></div></div>
 </div>
 
 <div class="revisedby">
-  Revised on November  3, 2017 08:59:59 
+  Revised on November  3, 2017 09:13:24 
   by <a class="existingWikiWord" href="/nlab/show/Urs+Schreiber">Urs Schreiber</a>
   (46.183.103.8)
 </div>
